# Comfyui-flexai

./: .env.example  .gitignore  README-zh.md  README.md  __init__.py  provider_config.py  pyproject.toml  requirements.txt
.github/workflows/: publish.yml
nodes/: __init__.py
nodes/flexai/: openai_image.py  openai_text.py
nodes/utils/: __init__.py  images.py  model_manager.py  openai_standard.py  openai_standard.py.backup  progress_control.py
workflows/: flexai-figure-redress.json  flexai-product-placement.json
